--- a/react_source/public/index.html
+++ b/react_source/public/index.html
@@ -28,15 +28,20 @@
           <!-- End Theme Style-->
           
           <!-- ======= Apply theme =======-->
-          <!-- <script>
+          <script>
             // Apply the theme as early as possible to avoid flicker
             (function() {
-            const storedTheme = localStorage.getItem('theme') || 'light';
+            // const storedTheme = localStorage.getItem('theme') || 'light';
+            const storedTheme = 'dark';
             document.documentElement.setAttribute('data-bs-theme', storedTheme);
             })();
-          </script> -->
+          </script>
+
+
 
           <!-- ======= Google Analytics ======= -->
+          <!-- <link href="https://calendar.google.com/calendar/scheduling-button-script.css" rel="stylesheet">
+          <script src="https://calendar.google.com/calendar/scheduling-button-script.js" async></script> -->
           <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-CN09X6ELXM"></script>
           <script>
             window.dataLayer = window.dataLayer || [];
