--- a/react_source/public/index.html
+++ b/react_source/public/index.html
@@ -3,7 +3,7 @@
   <head>
           <meta charSet="utf-8" />
           <meta name="viewport" content="width=device-width, initial-scale=1" />
-          <title> Buttr.io </title>
+          <title> Buttr.io - Scaling Businesses </title>
 
           <!-- ======= Favico =======-->
           <link rel="icon" href="favico.ico" />
