--- a/react_source/public/index.html
+++ b/react_source/public/index.html
@@ -36,8 +36,11 @@
             document.documentElement.setAttribute('data-bs-theme', storedTheme);
             })();
           </script>
-
-
+            
+            <!-- Calendar Button -->
+             <link href="https://calendar.google.com/calendar/scheduling-button-script.css" rel="stylesheet" />
+              <script src="https://calendar.google.com/calendar/scheduling-button-script.js" async ></script>
+            <!-- Calendar Button End -->
 
           <!-- ======= Google Analytics ======= -->
           <!-- <link href="https://calendar.google.com/calendar/scheduling-button-script.css" rel="stylesheet">
